--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -5,10 +5,10 @@
     </div>
     <div class="links">
       <ul>
-        <li><a class="fs-20 fs-sm-16 btn-hover" href="product.html">系列鏡框</a></li>
-        <li><a class="fs-20 fs-sm-16 btn-hover" href="locations.html">門市據點</a></li>
-        <li><a class="fs-20 fs-sm-16 btn-hover" href="blog.html">部落格</a></li>
-        <li><a class="fs-20 fs-sm-16 btn-hover" href="Q&A.html">常見問題</a></li>
+        <li><a class="fs-20 fs-sm-16 btn-hover" href="./product.html">系列鏡框</a></li>
+        <li><a class="fs-20 fs-sm-16 btn-hover" href="./locations.html">門市據點</a></li>
+        <li><a class="fs-20 fs-sm-16 btn-hover" href="./blog.html">部落格</a></li>
+        <li><a class="fs-20 fs-sm-16 btn-hover" href="./Q&A.html">常見問題</a></li>
       </ul>
     </div>
   </div>
