--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,7 +1,9 @@
 <div class="header">
   <div class="container">
     <div class="logo">
-      <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/logo-white.png" alt="header-logo">
+      <a href="./index.html">
+        <div class="main-logo"></div>
+      </a>
     </div>
     <div class="links">
       <ul>
