--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -17,6 +17,7 @@ body{
 @import './pages/product.scss';
 @import './pages/locations.scss';
 @import './pages/location.scss';
+@import './pages/QA.scss';
 
 .header, .footer{
   background: $red;
