--- a/assets/scss/pages/_product.scss
+++ b/assets/scss/pages/_product.scss
@@ -65,6 +65,8 @@
   display: flex;
   justify-content: space-between;
   font-size: 24px;
+  flex-wrap: wrap;
+  max-width: 306px;
 }
 .glasses-product-prices p:nth-child(2){
   color: $red;
