--- a/assets/scss/utils/_images.scss
+++ b/assets/scss/utils/_images.scss
@@ -45,3 +45,16 @@ $product-logos: (
     "location-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/store-4.png",
     "location-logo-5": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/store-5.png",
   );
+  $blog-logos:(
+    "blog-article-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-1.png",
+    "blog-article-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-2.png",
+    "blog-article-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-3.png",
+    "blog-article-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-4.png",
+    "blog-article-logo-5": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-5.png",
+  );
+  $blog-page-logos:(
+    "blog-page-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-1.png",
+    "blog-page-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-2.png",
+    "blog-page-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-3.png",
+    "blog-page-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-4.png",
+  );
