--- a/assets/scss/utils/_text.scss
+++ b/assets/scss/utils/_text.scss
@@ -10,6 +10,9 @@
 .fs-36{
   font-size: 36px;
 }
+.fs-40{
+  font-size: 40px;
+}
 .fs-42{
   font-size: 42px;
 }
@@ -40,6 +43,9 @@
 .mt-16{
   margin-top: 16px;
 }
+.mt-24{
+  margin-top: 24px;
+}
 .mt-32{
   margin-top: 32px;
 }
@@ -49,6 +55,9 @@
 }
 .mb-8{
   margin-bottom: 8px;
+}
+.mb-16{
+  margin-bottom: 16px;
 }
 .mb-24{
   margin-bottom: 24px;
@@ -65,24 +74,56 @@
 .ptb-80{
   padding: 80px 0;
 }
-
+.text-red{
+  color: $red;
+}
 .btn-hover{
   padding: 10px;
 }
-.btn-hover:hover{
+.btn-hover:hover, .btn:hover, .nav-hover:hover{
   background: #e74d42;
 }
 .cursor-p{
   cursor: pointer;
 }
-@media screen and (max-width: 768px) {
+.bg-dark-red{
+  background: $dark-red;
+}
+.d-flex{
+  display: flex;
+}
+.gap-8{
+  gap: 8px;
+}
+.gap-24{
+  gap: 24px;
+}
+.gap-48{
+  gap: 48px;
+}
+.jc-sb{
+  justify-content: space-between;
+}
+.ai-c{
+  align-items: center;
+}
+@media screen and (max-width: 992px) {
+  .fs-md-16{
+    font-size: 16px;
+  }
   .fs-md-24{
     font-size: 24px;
+  }
+  .mt-md-8{
+    margin-top: 8px;
+  }
+  .mb-md-4{
+    margin-bottom: 4px;
   }
 }
 // phone size 
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 767px) {
   .fs-sm-16{
     font-size: 16px;
   }
