--- a/layout/title.ejs
+++ b/layout/title.ejs
@@ -1,3 +1,3 @@
-<div class="locations-title mb-32">
+<div class="locations-title mb-32 mb-sm-24">
   <h2 class="fs-48 fs-sm-24 fw-bold ml-16"><%= title %></h2>
 </div>
