--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -60,7 +60,7 @@
 @media screen and (max-width: 992px) {
   .container{
     // outline: 1px solid white;
-    padding: 0 36px;
+    // padding: 0 36px;
 	}
   .material-symbols-outlined{
     font-size: 36px;
@@ -99,7 +99,7 @@
   }
   .footer .container{
     // outline: 10px solid blue;
-    padding: 0 13px;
+    // padding: 0 13px;
   }
   .material-symbols-outlined{
     font-size: 18px;
