--- a/assets/scss/utils/_text.scss
+++ b/assets/scss/utils/_text.scss
@@ -77,6 +77,12 @@
 .text-red{
   color: $red;
 }
+.text-italic{
+  font-style: italic;
+}
+.text-ac{
+  text-align: center;
+}
 .btn-hover{
   padding: 10px;
 }
