--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
-    padding: 0;
     height: fit-content;
     align-items: center;
   }
@@ -29,7 +28,7 @@
 
 
 @media screen and (max-width: 992px) {
-  .container{
+  .header-container{
     max-width: 1320px; //1296 + 24px
   }
 }
