--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -59,21 +59,6 @@ body{
 .advantage-logo{
   margin: 0 auto;
 }
-.classic-designs .container{
-  text-align: center;
-}
-.classic-designs-categories{
-  // outline: 5px solid red;
-  display: flex;
-  // justify-content: space-between;
-  // flex-wrap: wrap;
-  gap: 24px;
-}
-.classic-designs-category{
-  width: 33.333%;
-  color: $red;
-  font-style: italic;
-}
 .classic-designs-category-logo{
   width: 100%;
   height: 416px;  
@@ -177,13 +162,10 @@ form{
     width: calc(50% - 12px);
   }
   .classic-designs-categories{
-    // outline: 3px solid red;
     justify-content: center;
-    flex-wrap: wrap;
   }
-  .classic-designs-category{
-    // outline: 3px solid red;
-    width: 336px;
+  .classic-designs-container{
+    max-width: 372px;
   }
   .classic-designs-category-logo{
     height: 336px;    
@@ -210,8 +192,6 @@ form{
 }
 @media screen and (max-width: 767px) {
   .banner{
-    // outline: 10px solid blue;
-    // padding: 144px 0;
     height: calc(100vh - 176px);
   }
   .banner .container{
