--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="container">
+  <div class="container header-container">
     <div class="logo">
       <a href="./index.html">
         <div class="main-logo"></div>
