--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -91,7 +91,7 @@ body{
 }
 .recommend{
   // max-width: 306px;
-  width: 25%;
+  // width: 25%;
   border-radius: 4px;
   border: 1px solid #DEE2E6;
   /* offset-x | offset-y | blur-radius | color */
@@ -103,7 +103,7 @@ body{
 }
 .recommends-group{
   display: flex;
-  gap: 24px;
+  // gap: 24px;
   justify-content: center;
   color: black;
 }
@@ -177,15 +177,7 @@ form{
   .feat-design{
     width: 100%;
   }
-  .recommends-group{
-    width: 100%;
-    flex-wrap: wrap;
-    gap: 24px;
-  }
-  .recommend{
-    width: calc(50% - 24px);
-    box-sizing: border-box;
-  }
+
   .contact .container{
     padding: 0 96px;
   }
@@ -200,10 +192,6 @@ form{
   .advantages .container, .feat-designs .container, .recommends .container, .contact .container{
     // outline: 10px solid blue;
     padding: 0 13px;
-  }
-  .recommend{
-    width: 100%;
-    gap: 0;
   }
   .contact-form-btn{
     padding: 16px 0;
