--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,11 +1,12 @@
-<div class="header">
+<div class="header bg-red">
   <div class="container header-container">
     <div class="logo">
-      <a href="./index.html">
-        <div class="main-logo"></div>
+      <a href="./index.html">        
+        <!-- h1標籤加在logo上 -->
+        <h1 class="main-logo"></h1>
       </a>
     </div>
-    <div class="links">
+    <div class="links text-white">
       <ul>
         <li><a class="fs-20 fs-sm-16 btn-hover" href="./product.html">系列鏡框</a></li>
         <li><a class="fs-20 fs-sm-16 btn-hover" href="./locations.html">門市據點</a></li>
