--- a/layout/nav.ejs
+++ b/layout/nav.ejs
@@ -1,4 +1,4 @@
-<div class="nav bg-dark-red d-flex">
+<div class="nav bg-dark-red d-flex text-white">
   <div class="container d-flex jc-sb">
     <ul class="d-flex fs-20 gap-48 ai-c">
       <li class="nav-hover h-40 ac-c"><a class=""  href="#">最新消息</a></li>
