--- a/layout/paginate.ejs
+++ b/layout/paginate.ejs
@@ -1,8 +1,9 @@
+<!-- ; pagination 區塊可在當前頁碼加上 .active 樣式，讓使用者清楚目前處於哪一頁 -->
 <div class="glasses-pages">
   <div class="container">
     <ul class="paginate-group">
       <li><a href="#" class="paginate-a last-page">上一頁</a></li>
-      <li><a href="#" class="paginate-a">1</a></li>
+      <li><a href="#" class="paginate-a paginate-active">1</a></li>
       <li><a href="#" class="paginate-a">2</a></li>
       <li><a href="#" class="paginate-a">3</a></li>
       <li><a href="#" class="paginate-a">4</a></li>
