--- a/layout/title.ejs
+++ b/layout/title.ejs
@@ -1,3 +1,2 @@
-<div class="locations-title mb-32 mb-sm-24">
-  <h2 class="fs-48 fs-sm-24 fw-bold ml-16"><%= title %></h2>
-</div>
+<!-- ; 「門市據點」左側線條不需多包一層 div 處理，可直接搭配 padding-left 推出適當間距 -->
+<h2 class="locations-title mb-32 mb-sm-24 fs-48 fs-sm-24 fw-bold"><%= title %></h2>
