--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -1,10 +1,3 @@
-@each $number, $url in $blog-logos{
-  .#{$number}{
-    background-image: url($url);
-    background-position: center;
-    background-size: cover;
-  }
-}
 .ac-c{
   align-content: center;
 }
@@ -52,6 +45,9 @@
   position: absolute;
   bottom: 0;
   right: 0;
+}
+.article-btn > span:hover{
+  color: $red;
 }
 @media screen and (max-width: 992px) {
   .blog{
