--- a/assets/scss/pages/_location.scss
+++ b/assets/scss/pages/_location.scss
@@ -1,11 +1,13 @@
-.p-0{
-  padding: 0;
-}
 .d-none{
   display: none;
 }
+.location-row{
+  display: flex;
+  gap: 24px;
+}
 .location-page{
   width: calc(526 / 1296 * 100%);
+  // height: 414px;
 }
 .location-map{
   background-image: url("../images/location_map.png");
@@ -15,8 +17,9 @@
   height: 414px;
 }
 @media screen and (max-width: 992px) {  
-  .p-md-36{
-    padding: 0 36px;
+  .location-row{
+    // outline: 2px solid red;
+    flex-direction: column;
   }
   .location-page{
     width: 100%;
@@ -25,7 +28,8 @@
   }
   .location-page-logo, .location-page-text{
     width: 50%;
-    height: 100%;
+    // height: 100%;
+    height: 224px;
   }
   .location-map{
     width: 100%;
