--- a/assets/scss/pages/_product.scss
+++ b/assets/scss/pages/_product.scss
@@ -1,10 +1,3 @@
-@each $number, $url in $product-logos{
-  .#{$number}{
-    background-image: url($url);
-    background-position: center;
-    background-size: cover;
-  }
-}
 .glasses-tabs .container{
   // outline: 1px solid red;
   display: flex;
@@ -102,7 +95,7 @@
   font-size: 18px;
   padding: 12px 16px;
 }
-.paginate-a:active{
+.paginate-a:active, .paginate-active{
   background: black;
   color: white;
 }
