--- a/assets/scss/utils/_images.scss
+++ b/assets/scss/utils/_images.scss
@@ -1,60 +1,56 @@
-$index-logos:(
-  "index-bg-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-header.png",
-  "index-bg-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/index-bg.png",
+$logos:(
+  "index-bg-1": "home-header.png",
+  "index-bg-2": "index-bg.png",
 
-  "advantage-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section2-1.png",
-  "advantage-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section2-2.png",
-  "advantage-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section2-3.png",
-  "advantage-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-sectioin2-4.png",
+  "advantage-logo-1": "home-section2-1.png",
+  "advantage-logo-2": "home-section2-2.png",
+  "advantage-logo-3": "home-section2-3.png",
+  "advantage-logo-4": "home-sectioin2-4.png",
 
-  "classic-designs-category-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-1.png",
-  "classic-designs-category-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-2.png",
-  "classic-designs-category-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section3-3.png",
+  "classic-designs-category-logo-1": "home-section3-1.png",
+  "classic-designs-category-logo-2": "home-section3-2.png",
+  "classic-designs-category-logo-3": "home-section3-3.png",
 
-  "feat-design-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-1-sm.png",
-  "feat-design-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section4-2-sm.png",
+  "feat-design-logo-1": "home-section4-1-sm.png",
+  "feat-design-logo-2": "home-section4-2-sm.png",
 
-  "recommend-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-1.png",
-  "recommend-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-2.png",
-  "recommend-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-3.png",
-  "recommend-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/home-section5-4.png",
-  );
-$product-logos: (
-  "glasses-tab-content-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-1.png",
-  "glasses-tab-content-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-2.png",
-  "glasses-tab-content-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-3.png",
-  "glasses-tab-content-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-header-4.png",
+  "recommend-logo-1": "home-section5-1.png",
+  "recommend-logo-2": "home-section5-2.png",
+  "recommend-logo-3": "home-section5-3.png",
+  "recommend-logo-4": "home-section5-4.png",
 
-  "glasses-product-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-1.png",
-  "glasses-product-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-2.png",
-  "glasses-product-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-3.png",
-  "glasses-product-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-4.png",
-  "glasses-product-logo-5": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-5.png",
-  "glasses-product-logo-6": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-6.png",
-  "glasses-product-logo-7": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-7.png",
-  "glasses-product-logo-8": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-8.png",
-  "glasses-product-logo-9": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-9.png",
-  "glasses-product-logo-10": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-10.png",
-  "glasses-product-logo-11": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-11.png",
-  "glasses-product-logo-12": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/product-12.png",
-  );
-  $location-logos:(
-    "location-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/store-1.png",
-    "location-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/store-2.png",
-    "location-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/store-3.png",
-    "location-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/store-4.png",
-    "location-logo-5": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/store-5.png",
-  );
-  $blog-logos:(
-    "blog-article-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-1.png",
-    "blog-article-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-2.png",
-    "blog-article-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-3.png",
-    "blog-article-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-4.png",
-    "blog-article-logo-5": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blog-5.png",
-  );
-  $blog-page-logos:(
-    "blog-page-logo-1": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-1.png",
-    "blog-page-logo-2": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-2.png",
-    "blog-page-logo-3": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-3.png",
-    "blog-page-logo-4": "https://raw.githubusercontent.com/hexschool/2022-web-layout-training/main/week3-4/blogpage-4.png",
-  );
+  "glasses-tab-content-logo-1": "product-header-1.png",
+  "glasses-tab-content-logo-2": "product-header-2.png",
+  "glasses-tab-content-logo-3": "product-header-3.png",
+  "glasses-tab-content-logo-4": "product-header-4.png",
+
+  "glasses-product-logo-1": "product-1.png",
+  "glasses-product-logo-2": "product-2.png",
+  "glasses-product-logo-3": "product-3.png",
+  "glasses-product-logo-4": "product-4.png",
+  "glasses-product-logo-5": "product-5.png",
+  "glasses-product-logo-6": "product-6.png",
+  "glasses-product-logo-7": "product-7.png",
+  "glasses-product-logo-8": "product-8.png",
+  "glasses-product-logo-9": "product-9.png",
+  "glasses-product-logo-10": "product-10.png",
+  "glasses-product-logo-11": "product-11.png",
+  "glasses-product-logo-12": "product-12.png",
+
+  "location-logo-1": "store-1.png",
+  "location-logo-2": "store-2.png",
+  "location-logo-3": "store-3.png",
+  "location-logo-4": "store-4.png",
+  "location-logo-5": "store-5.png",
+
+  "blog-article-logo-1": "blog-1.png",
+  "blog-article-logo-2": "blog-2.png",
+  "blog-article-logo-3": "blog-3.png",
+  "blog-article-logo-4": "blog-4.png",
+  "blog-article-logo-5": "blog-5.png",
+
+  "blog-page-logo-1": "blogpage-1.png",
+  "blog-page-logo-2": "blogpage-2.png",
+  "blog-page-logo-3": "blogpage-3.png",
+  "blog-page-logo-4": "blogpage-4.png",
+);
