adjust banner size

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -165,8 +165,9 @@ form{
   }
 }
 @media screen and (max-width: 767px) {
-  .banner{
-    height: calc(100vh - 176px);
+  .banner, .text{
+    height: 396px;
+    // height: calc(100vh - 176px);
   }
   .banner .container{
     padding: 0 16px;
